# kiku

./: .gitignore  CLAUDE.md  Cargo.toml
.analysis/: architecture.md  architecture.yaml
.github/workflows/: release.yml
src/: chunker.rs  config.rs  embedder.rs  lib.rs  main.rs  query.rs  redact.rs
src/fetcher/: client.rs  mod.rs  sync.rs
src/storage/: embed.rs  mod.rs  search.rs  types.rs
src/tools/: mod.rs
