[package]
name = "kiku"
version = "0.1.0"
edition = "2024"
description = "Slack conversation semantic search CLI"
license = "MIT"
repository = "https://github.com/thkt/kiku"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.36", features = ["bundled"] }
sqlite-vec = "0.1.6"
sha2 = "0.10"
bytemuck = "1"
regex-lite = "0.1"

[features]
test-support = []

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
